test/success/integration/_succ_value_1.hs
x :: Double
x = 1.3
main = print x