test/fail/integration/_fail_sem_expr_length_1.hs
x :: Int
x = length 3
main = print "hello"